5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1573_1326.log
== SUBMITION (2019-03-11 15:02:13) 
-- CODE:
printf(40+35)

-- EXECUTION TIME:
0.179376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf(40+35)
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:02:34) 
-- CODE:
print(40+35)

-- EXECUTION TIME:
0.122073
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
